- implementação de auth middleware - Migração da entidade Job no BD - Use case Job
